2003-03-12  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network-conf.in: now stores fine both IPv4 and IPv6 
	  addresses in the /etc/hosts file

2003-03-08  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Release 0.24.0

2003-03-08  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot-conf.in, boot.pl.in, partition.pl.in: modified to include
	  partition list info in the xml (it sends the device and partition
	  type for each partition)

2003-03-04  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot-lilo.pl.in: lilo needs the vga settings in the "vga" entry, not
	  in the "append" entry. Fixed

2003-02-21  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Release 0.23.0

2003-02-19  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* service-list.pl.in: added more service descriptions, patch by Martin
	  Lundberg <martin.lundberg3@telia.com>

2003-02-07  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in: require autoconf 2.52 or bigger.

2003-02-06  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in: added more modem options for ppp connection, such
	  as modem volume and dialing type (pulses, tones)

2003-01-14  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot-conf.in, network-conf.in, network-pl-in, platform.pl.in,
	  runlevel-conf.in, service.pl.in, time-conf.in, users-conf.in:
	  Added RH8.0 in the supported distros list
	* platform.pl.in: added codename for RH7.3, the dialog looks prettier
	  with codenames :-)

2002-12-28  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* service.pl.in, runlevel-conf.in: added two new directives to
	  runlevel-conf, they are for getting a service parameters and for
	  throwing a service 

2002-12-26  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* service-list.pl.in: added some descriptions to the list.

2002-12-18  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in: fixed ppp interface creation in debian (other distros
	  should be tested)
