@@ -68,7 +68,7 @@ $version = "___version___";
 
               "suse-7.0", "turbolinux-7.0",
 	      
-              "slackware-8.0.0", "slackware-9.0",
+              "slackware-8.0.0", "slackware-8.1", "slackware-9.0",
 
               "gentoo");
 
@@ -437,6 +437,7 @@ sub conf_get_parse_table
    "turbolinux-7.0"  => "redhat-7.0",
    
    "slackware-8.0.0" => "debian-2.2",
+   "slackware-8.1"   => "debian-2.2",
    "slackware-9.0"   => "debian-2.2",
 
    "gentoo"          => "redhat-7.0"
